reparo em cadastro de funcionarios solicitado pela carla dondas

--- a/Nucleo.Web/WebContent/Projetos/Medicao/profissionais.xhtml
+++ b/Nucleo.Web/WebContent/Projetos/Medicao/profissionais.xhtml
@@ -140,7 +140,7 @@
 			</h:form>
 			<p:spacer height="50px" />
 			<h:form>
-				<p:dataTable value="#{profissionaisBean.profissionais}"
+				<p:dataTable id="funcionarios" value="#{profissionaisBean.profissionais}"
 					var="profissional" paginator="true" rows="10">
 
 					<p:column headerText="Profissional" filterBy="nomeCompleto"
