inicio de atualizações de justificativa mais medicaoequipe

--- a/Nucleo.Web/WebContent/Projetos/Medicao/servicoEquipe.xhtml
+++ b/Nucleo.Web/WebContent/Projetos/Medicao/servicoEquipe.xhtml
@@ -83,7 +83,7 @@
 								<p:row>
 									<p:column colspan="2">
 										<p:outputLabel
-											value="O funcionário #{medicaoProjetoBean.justificativa.mobilizacao.funcionario.nomeCompleto} tem " />
+											value="O funcionário #{medicaoProjetoBean.justificativa.medicaoEquipe.mobilizacao.funcionario.nomeCompleto} tem " />
 										<p:outputLabel
 											value="#{medicaoProjetoBean.diasDevidos} dias para justificar" />
 
