--- a/Nucleo.Web/WebContent/Projetos/Cadastro/associarProjeto.xhtml
+++ b/Nucleo.Web/WebContent/Projetos/Cadastro/associarProjeto.xhtml
@@ -136,7 +136,7 @@
 							</h:outputText>
 						</p:column>	
 						<f:facet name="footer">
-							<p:commandButton value="Associar grupos" ajax="false"
+							<p:commandButton value="Associar grupos" update="@all"
 							action="#{associarUsuarioProjetoBean.associarGrupo}"/>
 						</f:facet>		 
 					</p:dataTable>	
