--- a/Contratos.Web/WebContent/_template.xhtml
+++ b/Contratos.Web/WebContent/_template.xhtml
@@ -9,7 +9,6 @@
 	<h:head>
 		<title>Núcleo Engenharia Consultiva - Intranet 2.0</title>
 		<h:outputStylesheet name="_template.css" library="css" />
-		<h:outputStylesheet name="formulario.css" library="css" />
 		<h:outputStylesheet name="form.css" library="css" />
 	</h:head>
 
@@ -18,7 +17,7 @@
 	<div id="header">
 		<ui:insert name="header">
 			<p:commandLink action="/index.xhtml">
-				<p:graphicImage library="img" name="Logotipo_login.png" />
+				<p:graphicImage styleClass="img_logo" library="img" name="Logotipo_login.png" />
 			</p:commandLink>
 			<div id="inf_usuario" align="right">
 					<h:outputText value="Bem vindo #{loginBean.usuarioLogado.nome} | "></h:outputText>
