--- a/Nucleo.Web/WebContent/Projetos/Medicao/relatorios.xhtml
+++ b/Nucleo.Web/WebContent/Projetos/Medicao/relatorios.xhtml
@@ -7,7 +7,7 @@
 	<ui:define name="conteudo">
 		<h:form id="form">
 			<p:tabView>
-				<p:tab title="Resumo modelo sistema">
+				<p:tab title="Resumo Contratos">
 						<p:panel header="Gerar relatório">
 							<p:outputLabel value="Relatório a partir de: "/>
 							<p:selectOneMenu value="#{medicaoProjetoBean.dataSelecionada}">
