Criacao de entidades Funcionario e Controle de horas

--- a/Contratos.Web/WebContent/_template.xhtml
+++ b/Contratos.Web/WebContent/_template.xhtml
@@ -29,7 +29,7 @@
 		</ui:insert>
 		</div>
 		<div id="corpo">
-				<p:menubar id="menu">
+				<p:menubar id="menu" autoDisplay="false">
 						<p:submenu label="Relatórios">
 						<p:submenu label="Indústria Óleo e gás" url="#">
 							<p:menuitem value="123" url="/faces/views/relatorio/formularioRelatorio.xhtml"/>
