--- a/Contratos.Web/WebContent/login.xhtml
+++ b/Contratos.Web/WebContent/login.xhtml
@@ -9,6 +9,7 @@
 	<h:head>
 		<title>Núcleo Engenharia Consultiva - Intranet 2.0</title>
 		<h:outputStylesheet library="css" name="login.css" />
+		<h:outputStylesheet library="css" name="form.css" />
 	</h:head>
 	<body>
 		<div id="main-wrapper">
@@ -31,12 +32,22 @@
 								requiredMessage="Senha é um campo obrigatório" />
 						</p:panelGrid>
 						<br>
-						<p:commandButton action="#{loginBean.autenticar}" update="@all" value="Entrar" />
+						<p:commandButton action="#{loginBean.autenticar}"
+						 update="@form" value="Entrar"/>
 						</br>
-						<p:commandLink value="Primeiro acesso"/>
-						<br>
 						<p:commandLink value="Esqueci minha senha"/>
-						</br>
+						<p:dialog onShow="#{loginBean.primeiroAcesso}" modal="true" closable="false" header="Primeiro Acesso">
+					<p:panelGrid styleClass="panel_inf_proj">
+						<p:row>
+							<p:column>
+								<p:outputLabel value="Senha"/>
+							</p:column>
+							<p:column>
+								<p:password feedback="true"/>
+							</p:column>
+						</p:row>
+					</p:panelGrid>
+				</p:dialog>
 					</h:form>
 				</div>
 			</center>
