exclusao e delete de funcionario

--- a/Contratos.Web/WebContent/login.xhtml
+++ b/Contratos.Web/WebContent/login.xhtml
@@ -51,6 +51,7 @@
 						<p:commandButton rendered="#{loginBean.primeiroAcesso}" action="#{loginBean.cadastrarSenha}"
 						 update="@form" value="Cadastrar Senha"/>
 						</br>
+						<p:commandButton value="TesteMail" action="#{horariosEmail.enviarHorariosEmail}"/>
 					</h:form>
 				</div>
 			</center>
